# GDDR

./: CMakeLists.txt  README.md  package.xml
launch/: launch_everything.launch  le.launch  nodelet_launcher.launch  tracker.launch
models/nano/: args.yaml  results.csv
msg/: GraspDetectionResult.msg
scripts/: detect_grasp_node.py  filter_depth_node.py  testing_grasp.py  tracker_node.py
